# commit_artist

./: Cargo.toml  LICENSE  README.md
src/: external_command.rs  git.rs  main.rs  matcher.rs  settings.rs
src/git/: command_executer.rs  commit_object.rs  gitter.rs
